methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:20: error: not found: value faire
  for (compt <- 1 to 4) {faire(V)()}
                         ^PictureMono1:20: error: not found: value V
  for (compt <- 1 to 4) {faire(V)()}
                               ^